# BipedLoco-RL-CPG

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: example.yaml
source/agents/: CPG_RL.py  E2E_RL.py
source/environments/: envs.py
tests/: example.py
